Add ansible_managed tag in a few places

--- a/nginx/default.html
+++ b/nginx/default.html
@@ -1,4 +1,5 @@
 <html>
+<!-- {{ ansible_managed }} -->
 <head>
 <meta http-equiv="refresh" content="0; url=https://www.plug.org.au/">
 <title>Default server page, redirecting to main site</title>
